# drf-api-permissions-postgres

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
cafe_api_project/: asgi.py  settings.py  urls.py  wsgi.py
coffee/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
coffee/migrations/: 0001_initial.py
